--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "symfony/http-client": "^6.2",
+        "symfony/mailgun-mailer": "^6.2",
         "tcg/voyager": "^1.6"
     },
     "require-dev": {
